updated the frontend,gapi code with tests and sqlc code by adding transactions for db
